Correct alignement of paragraph for authors name

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -245,6 +245,7 @@ p {
 
 .author p {
   margin: 4px 0;
+  text-align: center;
 }
 
 .profile-photo {
